Respect main thread scrolling reasons for fallback to root layer scrolling.

For this purpose, ScrollingCoordinator now also commits the main thread scrolling reasons to the visual viewport scroll layer. We can thus simply check for main thread scrolling reasons on the final layer selected for scrolling in LayerTreeHostImpl::FindScrollLayerForDeviceViewportPoint.

BUG=625100
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2118773002
Cr-Commit-Position: refs/heads/master@{#403765}

Former-commit-id: 59eeb0282913e575a4409c257ce13f6de8e03d69