third_party/WebKit/Source/web/tests/ScrollingCoordinatorTest.cpp
@@ -26,7 +26,9 @@
 
 #include "core/css/CSSStyleSheet.h"
 #include "core/css/StyleSheetList.h"
+#include "core/frame/FrameHost.h"
 #include "core/frame/FrameView.h"
+#include "core/frame/VisualViewport.h"
 #include "core/layout/LayoutPart.h"
 #include "core/layout/api/LayoutViewItem.h"
 #include "core/layout/compositing/CompositedLayerMapping.h"
@@ -132,6 +134,10 @@ TEST_F(ScrollingCoordinatorTest, fastScrollingByDefault)
     ASSERT_FALSE(rootScrollLayer->shouldScrollOnMainThread());
     ASSERT_EQ(WebEventListenerProperties::Nothing, webLayerTreeView()->eventListenerProperties(WebEventListenerClass::TouchStartOrMove));
     ASSERT_EQ(WebEventListenerProperties::Nothing, webLayerTreeView()->eventListenerProperties(WebEventListenerClass::MouseWheel));
+
+    WebLayer* innerViewportScrollLayer = page->frameHost().visualViewport().scrollLayer()->platformLayer();
+    ASSERT_TRUE(innerViewportScrollLayer->scrollable());
+    ASSERT_FALSE(innerViewportScrollLayer->shouldScrollOnMainThread());
 }
 
 TEST_F(ScrollingCoordinatorTest, fastScrollingCanBeDisabledWithSetting)
@@ -150,6 +156,11 @@ TEST_F(ScrollingCoordinatorTest, fastScrollingCanBeDisabledWithSetting)
     WebLayer* rootScrollLayer = getRootScrollLayer();
     ASSERT_TRUE(rootScrollLayer->scrollable());
     ASSERT_TRUE(rootScrollLayer->shouldScrollOnMainThread());
+
+    // Main scrolling should also propagate to inner viewport layer.
+    WebLayer* innerViewportScrollLayer = page->frameHost().visualViewport().scrollLayer()->platformLayer();
+    ASSERT_TRUE(innerViewportScrollLayer->scrollable());
+    ASSERT_TRUE(innerViewportScrollLayer->shouldScrollOnMainThread());
 }
 
 
